[metadata]
name = gringotts
version = 2013.2
summary = OpenStack/UOS Billing System
author = Guangyu Suo
author-email = guangyu@unitedstack.com 
home-page = http://www.ustack.com/
classifier =
    Environment :: OpenStack/UOS
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    gringotts

[entry_points]
gringotts.notification =
    instance-create = gringotts.waiter.plugins.instance:InstanceCreateEnd
    instance-start = gringotts.waiter.plugins.instance:InstanceStartEnd
    instance-stop = gringotts.waiter.plugins.instance:InstanceStopEnd
    instance-resize = gringotts.waiter.plugins.instance:InstanceResizeEnd
    instance-delete = gringotts.waiter.plugins.instance:InstanceDeleteEnd
    volume-create = gringotts.waiter.plugins.volume:VolumeCreateEnd
    volume-change = gringotts.waiter.plugins.volume:VolumeChangeEnd
    volume-delete = gringotts.waiter.plugins.volume:VolumeDeleteEnd

gringotts.instance.product_item =
    flavor = gringotts.waiter.plugins.instance:FlavorItem
    image = gringotts.waiter.plugins.instance:ImageItem
    disk = gringotts.waiter.plugins.instance:DiskItem

gringotts.volume.product_item =
    size = gringotts.waiter.plugins.volume:SizeItem
    iops = gringotts.waiter.plugins.volume:IOPSItem

gringotts.storage =
    mysql = gringotts.db.impl_sqlalchemy:SQLAlchemyStorage

console_scripts =
    gring-api = gringotts.cmd.api:main
    gring-waiter = gringotts.waiter.service:waiter
    gring-master = gringotts.master.service:master
    gring-worker = gringotts.worker.service:worker
    gring-dbsync = gringotts.db:dbsync

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
