[metadata]
name = gringotts
version = 2013.2
summary = OpenStack/UOS Billing System
author = Guangyu Suo
author-email = guangyu@unitedstack.com 
home-page = http://www.ustack.com/
classifier =
    Environment :: OpenStack/UOS
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    gringotts

[entry_points]
gringotts.notification =
    instance-create = gringotts.waiter.plugins.instance:InstanceCreateEnd
    instance-start = gringotts.waiter.plugins.instance:InstanceStartEnd
    instance-stop = gringotts.waiter.plugins.instance:InstanceStopEnd
    instance-resize = gringotts.waiter.plugins.instance:InstanceResizeEnd
    instance-delete = gringotts.waiter.plugins.instance:InstanceDeleteEnd
    instance-suspend = gringotts.waiter.plugins.instance:InstanceSuspendEnd
    instance-resume = gringotts.waiter.plugins.instance:InstanceResumeEnd
    volume-create = gringotts.waiter.plugins.volume:VolumeCreateEnd
    volume-resize = gringotts.waiter.plugins.volume:VolumeResizeEnd
    volume-delete = gringotts.waiter.plugins.volume:VolumeDeleteEnd
    snapshot-create = gringotts.waiter.plugins.snapshot:SnapshotCreateEnd
    snapshot-delete = gringotts.waiter.plugins.snapshot:SnapshotDeleteEnd
    image-create = gringotts.waiter.plugins.image:ImageCreateEnd
    image-delete = gringotts.waiter.plugins.image:ImageDeleteEnd
    floatingip-create = gringotts.waiter.plugins.floatingip:FloatingIpCreateEnd
    floatingip-resize = gringotts.waiter.plugins.floatingip:FloatingIpResizeEnd
    floatingip-delete = gringotts.waiter.plugins.floatingip:FloatingIpDeleteEnd
    router-create = gringotts.waiter.plugins.router:RouterCreateEnd
    router-delete = gringotts.waiter.plugins.router:RouterDeleteEnd
    user-register = gringotts.waiter.plugins.user:UserRegisterEnd

gringotts.instance.product_item =
    running_flavor = gringotts.waiter.plugins.instance:FlavorItem
    running_license = gringotts.waiter.plugins.instance:LicenseItem
    suspend_disk = gringotts.waiter.plugins.instance:DiskItem
    stopped_disk = gringotts.waiter.plugins.instance:DiskItem

gringotts.volume.product_item =
    running_size = gringotts.waiter.plugins.volume:SizeItem

gringotts.snapshot.product_item =
    running_size = gringotts.waiter.plugins.snapshot:SizeItem

gringotts.image.product_item =
    running_size = gringotts.waiter.plugins.image:SizeItem

gringotts.floatingip.product_item =
    running_rate_limit = gringotts.waiter.plugins.floatingip:RateLimitItem

gringotts.router.product_item =
    running_router = gringotts.waiter.plugins.router:RouterItem

gringotts.storage =
    mysql = gringotts.db.impl_sqlalchemy:SQLAlchemyStorage
    sqlite = gringotts.db.impl_sqlalchemy:SQLAlchemyStorage

console_scripts =
    gring-api = gringotts.cmd.api:main
    gring-waiter = gringotts.waiter.service:waiter
    gring-master = gringotts.master.service:master
    gring-worker = gringotts.worker.service:worker
    gring-dbsync = gringotts.db:dbsync

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
